--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@ body, html {
   background-color: #000;
 }
 
-.video {
-  width: 100%;
-  height: 100%;
+.welcome-text {
+  font-size: 24px;
+  color: red;
+  font-weight: bold;
 }
